refactor: rework palette storage with counted tables
Rewrite PaletteImpl around PaletteTable, a counted palette table replacing the fastutil index maps. Small tables use a linear reverse lookup and larger ones a hash index, and the count kept for each entry lets mutations collapse back to single value mode and drives optimize(Optimization).

Palettes no longer assign meaning to zero. count(), getAllPresent(), and isEmpty() are removed in favor of value and predicate operations: count(int), count(IntPredicate), any, all, and getAllCounts. singleValue() now throws IllegalStateException outside single value mode instead of returning -1, which is a storable value and therefore ambiguous. DynamicChunk counts blocks and fluids by testing real block states instead of assuming zero means empty, Heightmap and BlockLight detect air through the block registry the same way, and new sections fill biomes with plains instead of registry id 0.

Biome palettes are sized from the registry: biomes()/biomes(int) become biomesSized(int biomeCount) and biomesSized(int biomeCount, int bitsPerEntry), and the direct width is derived as ceillog2(count) to match vanilla, removing BIOME_PALETTE_DIRECT_BITS. The serializer now requires palettes built with its settings instead of converting on write. Section and GeneratorImpl.GenSection lose their default constructors since a biome palette needs the registry size, and Section.clear() is deprecated.

Benchmarks are reorganized into read, mutation, and full scan suites. New tests cover the table, scan equivalence, SWAR paths, compare semantics, and serialization, and the biome and generator tests move to the registries fixture naming.